tests/snapshots/snapshot_tests__array_init_ite_jump_two.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_ite_jump_two.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 N N) i) (Read-Int-Int Array-Int-Int!val!1 i))",
    ],
}
